# testing-warmup

./: .pre-commit-config.yaml  README.md  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: python-tests.yml
src/testing_warmup/: app.py
tests/: test_methods.py
