[tool.poetry]
name = "testing_warmup"
version = "0.1.0"
description = ""
authors = ["Alex Simon <aleandre6579.simon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
